--- a/test1.html
+++ b/test1.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phawat Wow</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <a href="./test1">goto test1</a>
+    <h1>test1 page</h1>
+    <a href="./">go home</a>
 </body>
 </html>
